<resources>
    <string name="app_name">Library Manager</string>
    <string name="scan_book"><b>Add New Book</b></string>
    <string name="library_overview"><b>Library Overview</b></string>
    <string name="search_books"><b>Search Book</b></string>
    <string name="users"><b>Users</b></string>
    <string name="welcome">Welcome !</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="add_new_book">Add New Book</string>
</resources>


