<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.joellehanna.libraryuser.MainActivity">

    <ImageView
        android:id="@+id/Img"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="3"
        android:adjustViewBounds="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/book_stack" />

    <TextView
        android:id="@+id/welcomeMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome" />

    <Button
        android:id="@+id/scanBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:layout_marginBottom="10dp"
        android:text="@string/scan_book" />

    <TextView
        android:id="@+id/scanText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="161dp"
        android:text="" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/scanText"
        android:layout_alignStart="@+id/scanBook"
        android:layout_marginStart="-16dp"
        android:layout_marginBottom="-3dp"
        android:text="@string/library_overview"
        android:layout_alignLeft="@+id/scanBook"
        android:layout_marginLeft="-16dp" />

    <Button
        android:id="@+id/searchBooks"
        android:onClick="clickedSearchBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/scanBook"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-15dp"
        android:layout_marginBottom="129dp"
        android:text="@string/search_books"
        android:layout_alignRight="@+id/scanBook"
        android:layout_marginRight="-15dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/scanBook"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="46dp"
        android:text="@string/users"
        android:layout_alignRight="@+id/scanBook" />
</RelativeLayout>